# genomicUtils

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md  installation.md  requirements.txt
docs/general/: bedSelect.md  convertContigNames.md  extractExonFromGTF.md  extractGeneFromGTF.md  extractTranscriptFromGTF.md  fileNameConversion.md  generatePromoterBed.md  generateSampleMatrix.md  multiFastaSelect.md
docs/single_cell/: calcReadTypeProp.md  extractGEXFromH5.md  fragment2Bigwig.md  gexBamReadTypeProp.md  gexBamTagsToCSV.md
genomicUtils/: bedSelect.py  calcReadTypeProp.py  cli.py  convertContigNames.py  extractExonFromGTF.py  extractGEXFromH5.py  extractGeneFromGTF.py  extractTranscriptFromGTF.py  fileNameConversion.py  fragment2Bigwig.py  generatePromoterBed.py  generateSampleMatrix.py  gexBamReadTypeProp.py  gexBamTagsToCSV.py  multiFastaSelect.py  utils.py
scripts/: generate_index.py
test/: test.bw  test_fragments.bed
